--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
+tasks.named("jar") {
+	enabled = false
+}
+
 group = 'hello'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
@@ -24,6 +28,4 @@ dependencies {
 }
 }
 
-jar {
-	enabled = false
-}
+
