--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
-tasks.named("jar") {
-	enabled = false
-}
+jar.enabled=false
 
 group = 'hello'
 version = '0.0.1-SNAPSHOT'
@@ -25,7 +23,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 	exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-}
+	}
 }
 
 
