--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,14 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
-jar.enabled=false
+tasks.named("bootJar") {
+	archiveClassifier = 'boot'
+}
+
+tasks.named("jar") {
+	archiveClassifier = ''
+	enabled = false
+}
 
 group = 'hello'
 version = '0.0.1-SNAPSHOT'
