--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
-tasks.named("bootJar") {
-	archiveClassifier = 'boot'
-}
+//tasks.named("bootJar") {
+//	archiveClassifier = 'boot'
+//}
 
 tasks.named("jar") {
 	archiveClassifier = ''
