plain.jar 제거 tasks.named("jar") { 	enabled = false가 } 실패 archiveClassifier = '' 추가

--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ plugins {
 //}
 
 tasks.named("jar") {
-//	archiveClassifier = ''
-	enabled = false
+	archiveClassifier = ''
+	enabled = false가
 }
 
 group = 'hello'
