--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,22 @@ cache:
 
 script: "./gradlew clean build"
 
+before_deploy:
+  - zip -r hello-spring
+  - mkdir -p deploy
+  - mv hello-spring.zip deploy/hello-spring.zip
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: hello-spring-build
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private
+    local_dir: deploy
+    wait-until-deployed : true
+
 # CI 실행 완료 시 메일로 알람
 notifications:
   email:
