S3에 jar.zip 파일 추가되도록 수정

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: java
 jdk:
   - openjdk17
 
-g
+branches:
+  only:
+    -master
 
-# Travis CI 서버의 Home
+    # Travis CI 서버의 Home
 cache:
   directories:
     - '$HOME/.m2/repository'
