--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -26,11 +26,11 @@ jobs:
     - name: Checkout 
       uses: actions/checkout@v3  # (5) 프로젝트 코드를 CheckOut합니다.    
       
-    - name: Set up JDK 11 
+    - name: Set up JDK 17
       uses: actions/setup-java@v3 # (6) 
       with:
-        java-version: '11' 
-        distribution: 'temurin' 
+        java-version: '17'
+        distribution: 'adopt'
         
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew # (7)
