--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -7,6 +7,8 @@
 env:
   S3_BUCKET_NAME: hello-spring-build
   PROJECT_NAME: hello-spring
+  CODE_DEPLOY_APP_NAME: hello-spring-webservice
+  CODE_DEPLOY_GROUP_NAME: hello-spring-webservice-group
 
 name: deploy # (0) GitHub Action에서 보여질 이름을 지정합니다.
 
@@ -72,3 +74,7 @@ jobs:
 
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./$PROJECT_NAME.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/$PROJECT_NAME.zip # 내가 지정한 s3 버킷 이름에 프로젝트 압축 폴더 저장
+
+      #배포 그룹으로 해당 애플리케이션을 보냅니다.
+    - name: Code Deploy
+      run: aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name $CODE_DEPLOY_GROUP_NAME --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$PROJECT_NAME.zip
