--- a/src/main/resources/application-real.properties
+++ b/src/main/resources/application-real.properties
@@ -1,3 +1,4 @@
 spring.profiles.include=real-db
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.session.store-type=jdbc
+spring.pid.file=/home/ec2-user/app/step2/hello-spring.pid 
