--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.session.store-type=jdbc
 spring.pid.file=/home/ec2-user/app/step2/hello-spring.pid
+spring.jpa.defer-datasource-initialization=true
