엔진엑스를 사용한 무중단 배포 스크립트 자동 버전 관리를 위한 이름 변경

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ tasks.named("bootJar") {
 
 
 group = 'hello'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1-SNAPSHOT' + new Date().format("yyyyMMddHHmmss")
 sourceCompatibility = '17'
 
 repositories {
