--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/app/step2/zip/
+    destination: /home/ec2-user/app/step3/zip/ #엔진엑스를 통한 무중단 배포를 위한 폴더
     overwrite: yes
 permissions:
   - object: /
@@ -11,7 +11,17 @@ permissions:
     group: ec2-user
 
 hooks:
+  AfterInstall:
+  - location: stop.sh # 엔진엑스와 연결되어 있지 않은 스프링부트 종료
+    timeout: 60
+    runas: ec2-user
+
   ApplicationStart:
-    - location: deploy.sh
+    - location: start.sh # 엔진엑스와 연결되어 있지 않은 Port로 새 버전의 스프링 부트 시작
       timeout: 60
       runas: ec2-user
+
+  ValidateService :
+    - location: health.sh # 새 스프링 부트가 정상적으로 실행됐는지 확인
+      timeout : 60
+      runas : ec2-user
